# rag-playground

./: .env.example  .gitignore  Makefile  README.md  README_CN.md  package-lock.json  pyproject.toml  start.ps1
.github/workflows/: ci.yml
data/faq/: dynamodb-faq.md  nodejs-faq.md  typescript-faq.md
data/wikipedia/: climate-change.md  machine-learning.md  quantum-computing.md  renaissance-art.md  world-war-ii.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CompareView.tsx  ConfigPanel.tsx  DocumentUpload.tsx  QueryInput.tsx  ResponsePanel.tsx  SourceList.tsx
frontend/src/hooks/: useChat.ts  useConfig.ts
scripts/: check_ollama.py  pull_models.py  setup.py  teardown.py
server/: deps.py  main.py
server/routes/: chat.py  compare.py  config.py  documents.py
src/rag_playground/: __init__.py
src/rag_playground/config/: env.py  models.py
src/rag_playground/m01_llm_basics/: __init__.py  chat.py  (+4 more)
tests/: conftest.py  test_config.py
tests/helpers/: assertions.py  mock_provider.py
tests/m01_llm_basics/: test_chat.py
tests/m02_data_loading/: test_document.py  test_load_directory.py
tests/m03_chunking/: test_character_splitter.py  test_recursive_splitter.py  test_token_splitter.py
tests/m04_embeddings/: test_embed.py  test_similarity.py
tests/m05_vector_store/: test_in_memory_store.py  test_persistence.py
tests/m06_retrieval/: test_basic_retrieval.py
tests/m07_rag_pipeline/: test_pipeline.py
tests/m08_evaluation/: test_retrieval_metrics.py
tests/server/: test_server.py
(+49 files in other folders)
